--- a/package.json
+++ b/package.json
@@ -1,14 +1,25 @@
 {
-  "name": "usda-mars-mcp",
-  "version": "1.0.0",
+  "name": "mars-mcp-server",
+  "version": "0.1.0",
   "private": true,
+  "type": "module",
+  "engines": {
+    "node": ">=20"
+  },
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "test": "vitest run"
+    "test": "vitest run",
+    "start": "node dist/index-stdio.js",
+    "start:http": "node dist/index-http.js"
+  },
+  "dependencies": {
+    "@modelcontextprotocol/sdk": "^1.0.4",
+    "undici": "^6.18.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/node": "^22.10.1",
-    "typescript": "^5.7.2",
-    "vitest": "^2.1.5"
+    "@types/node": "^20.14.10",
+    "typescript": "^5.5.4",
+    "vitest": "^2.0.5"
   }
 }
